--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,35 @@
-librosa
-numpy
-soundfile
-pydub
-torch
-pyannote.audio
-speechbrain
-scikit-learn
-pandas
-tqdm
-PyYAML
-Flask
-werkzeug
-joblib
-psutil
+# Core audio processing
+librosa>=0.10.0
+soundfile>=0.12.0
+pydub>=0.25.0
+pyaudio>=0.2.13
+
+# Source separation
+demucs>=4.0.0
+
+# ML & data
+scikit-learn>=1.3.0
+pandas>=2.0.0
+numpy>=1.24.0
+joblib>=1.3.0
+
+# Deep learning (NOTE: Install PyTorch via conda for Windows compatibility)
+# conda install pytorch torchvision torchaudio cpuonly -c pytorch -y
+torch>=2.1.0
+torchaudio>=2.1.0
+speechbrain>=0.5.13
+
+# Diarization (optional - disabled for better compatibility)
+# pyannote.audio>=3.0
+
+# Web
+flask>=3.0.0
+werkzeug>=3.0.0
+flask-socketio>=5.3.0
+
+# Utilities
+pyyaml>=6.0
+tqdm>=4.66.0
+requests>=2.31.0
+python-dotenv>=1.0.0
+psutil>=5.9.0
